--- a/src/app/components/misc/location-select/location-select.component.scss
+++ b/src/app/components/misc/location-select/location-select.component.scss
@@ -11,7 +11,7 @@
   z-index: 1;
 }
 .dropdown .dropdown-item {
-  padding: 5px;
+  padding: 7px 5px;
 }
 .dropdown .dropdown-item:hover {
   cursor: pointer;
