--- a/src/app/components/pages/intro-page/intro-page.component.html
+++ b/src/app/components/pages/intro-page/intro-page.component.html
@@ -5,4 +5,6 @@
 <div *ngIf="!loading && users.length == 0">
   {{ 'No likes yet.' | translate }}
 </div>
-<user-item *ngFor="let user of users" [user]="user"></user-item>
+<div class="user-items-cont">
+  <user-item *ngFor="let user of users" [user]="user"></user-item>
+</div>
