--- a/src/app/components/pages/onboarding-page/onboarding-page.component.html
+++ b/src/app/components/pages/onboarding-page/onboarding-page.component.html
@@ -127,7 +127,7 @@
               <option *ngFor="let age of ages" [value]="age" [selected]="age == agePref.fromAge">{{age}}</option>
             </select>
           </div>
-          <span style="align-items: center; display: flex; margin: 0 5px;">и</span>
+          <span style="align-items: center; display: flex; margin: 0 5px;">{{ 'and' | translate }}</span>
           <div style="flex: 1 0 auto;">
             <select class="form-control" [value]="agePref.toAge" (change)="changePref('toAge', +$event.target.value)">
               <option *ngFor="let age of agesTo" [value]="age" [selected]="age == agePref.toAge">{{age}}</option>
@@ -407,16 +407,16 @@
             <label><input type="radio" value="not_tell" name="education_status" formControlName="education_status">{{ 'Rather not tell' | translate }}</label>
           </div>
           <div class="radio">
-            <label><input type="radio" value="none" name="education_status" formControlName="education_status">Нямам</label>
+            <label><input type="radio" value="none" name="education_status" formControlName="education_status">{{ 'I don\'t have' | translate }}</label>
           </div>
           <div class="radio">
-            <label><input type="radio" value="entry" name="education_status" formControlName="education_status">Основно</label>
+            <label><input type="radio" value="entry" name="education_status" formControlName="education_status">{{ 'Primary' | translate }}</label>
           </div>
           <div class="radio">
-            <label><input type="radio" value="mid" name="education_status" formControlName="education_status">Средно</label>
+            <label><input type="radio" value="mid" name="education_status" formControlName="education_status">{{ 'Secondary' | translate }}</label>
           </div>
           <div class="radio">
-            <label><input type="radio" value="higher" name="education_status" formControlName="education_status">Визше</label>
+            <label><input type="radio" value="higher" name="education_status" formControlName="education_status">{{ 'Higher' | translate }}</label>
           </div>
           <div>
             <small *ngIf="education_status.invalid && (education_status.dirty || education_status.touched)" class="text-danger">
