--- a/src/app/components/user-item/user-item.component.html
+++ b/src/app/components/user-item/user-item.component.html
@@ -1,11 +1,10 @@
 <div class="user-item rounded shadow-sm" title="{{ user?.intro?.message }}">
   <div class="image-cont rounded" [routerLink]="['/user/' + user.id]">
-    <div *ngIf="loading" style="height: 200px; display: flex; justify-content: center; align-items: center;">
+    <div *ngIf="loading" style="display: flex; justify-content: center; align-items: center;" #loaderCont>
       <loader></loader>
     </div>
-    <img class="rounded" [src]="getImg(user.profile_image)" (load)="imageLoaded()" (error)="errorLoadingImage()" />
-    <div class="img-text">
-    </div>
+    <img class="rounded" [src]="getImg(user.profile_image)" style="width: 100%;" (load)="imageLoaded()" (error)="errorLoadingImage()" [ngStyle]="{display: loading ? 'none': ''}" />
+    <div class="img-text"></div>
     <div class="item-overlay rounded">
       <div class="text-container">
         <div class="text-truncate name-info">
