Made dialogs medium size

--- a/src/app/components/pages/user-page/user-page.component.html
+++ b/src/app/components/pages/user-page/user-page.component.html
@@ -26,7 +26,7 @@
           <fa-icon class="primary-item" [icon]="faEllipsisH"></fa-icon>
         </a>
         <div class="dropdown-menu" style="margin-top: -10px;">
-          <a class="dropdown-item" (click)="openReportModal(reportDialog)" style="cursor: pointer;">
+          <a class="dropdown-item" (click)="openReportModal()" style="cursor: pointer;">
             <fa-icon [icon]="faFlag"></fa-icon>
             {{ 'Report' | translate }}
           </a>
