--- a/src/app/components/user-item/user-item.component.html
+++ b/src/app/components/user-item/user-item.component.html
@@ -1,9 +1,17 @@
 <div class="user-item rounded shadow-sm" title="{{ user?.intro?.message }}">
-  <div class="image-cont rounded" [routerLink]="['/user/' + user.id]">
+  <div class="image-cont rounded" [routerLink]="userProfileLink">
     <div *ngIf="loading" style="display: flex; justify-content: center; align-items: center;" #loaderCont>
       <loader></loader>
     </div>
-    <img class="rounded" [src]="getImg(user.profile_image)" style="width: 100%;" (load)="imageLoaded()" (error)="errorLoadingImage()" [ngStyle]="{display: loading ? 'none': ''}" />
+    <img
+      *ngIf="user.showImage"
+      class="rounded"
+      [src]="getImg(user.profile_image)"
+      style="width: 100%;"
+      [ngStyle]="{display: loading ? 'none': ''}"
+      (load)="imageLoaded()"
+      (error)="errorLoadingImage()"
+      />
     <div class="img-text"></div>
     <div class="item-overlay rounded">
       <div class="text-container">
