--- a/src/styles.scss
+++ b/src/styles.scss
@@ -150,3 +150,6 @@ input[type="radio"] {
 .compatibility-badge {
   background-color: #599c61;
 }
+
+// html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
