--- a/src/app/components/pages/chat/messages-page/messages-page.component.html
+++ b/src/app/components/pages/chat/messages-page/messages-page.component.html
@@ -20,10 +20,15 @@
              (click)="changeUser(user)"
              >
           <img src="{{ cordovaService.getImgPath2(user.profileImage) }}" class="rounded" />
-          <span class="member-name">{{ user.name }}</span>
-          <div *ngIf="user.lastMessage" style="margin-left: 5px; display: flex; overflow: hidden;">
-            <mat-icon *ngIf="user.id !== user.lastMessage.user_id">reply</mat-icon>
-            <span style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" [ngStyle]="{ 'font-weight': user.notSeenCount ? 700 : '' }">{{ user.lastMessage.text }}</span>
+          <div style="margin-left: 5px; height: 60px; display: flex; flex-direction: column; justify-content: flex-start;">
+            <div>
+              <span class="member-name">{{ user.name }}</span>
+              <span *ngIf="user.is_online" class="online-ic"></span>
+            </div>
+            <div *ngIf="user.lastMessage" style=" display: flex; overflow: hidden;">
+              <mat-icon *ngIf="user.id !== user.lastMessage.user_id">reply</mat-icon>
+              <span style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" [ngStyle]="{ 'font-weight': user.notSeenCount ? 700 : '' }">{{ user.lastMessage.text }}</span>
+            </div>
           </div>
         </div>
       </div>
