--- a/src/app/components/pages/chat/messages-page/messages-page.component.scss
+++ b/src/app/components/pages/chat/messages-page/messages-page.component.scss
@@ -4,7 +4,7 @@
 }
 
 .chat-user-item img {
-  width: 40px;
+  width: 60px;
 }
 
 .not-seen {
@@ -63,7 +63,7 @@
 }
 
 .chat-members-cont .member-name {
-  margin-left: 5px;
+  margin-top: 5px;
 }
 
 @media only screen and (max-width: 940px) {
