--- a/src/app/components/pages/chat/user-chat/user-chat.component.html
+++ b/src/app/components/pages/chat/user-chat/user-chat.component.html
@@ -48,9 +48,10 @@
       </div>
     </div>
 
-    <div style="position: absolute; width: 100%; height: 81px; bottom: 0; border-top: 1px solid #b0b0b0;">
+    <div style="position: absolute; width: 100%; height: 81px; bottom: 0; border-top: 1px solid #b0b0b0; display: flex; align-items: flex-end; background-color: #fff;">
       <textarea (keypress)="sendMessage($event)" [(ngModel)]="chatMsg[userId]" placeholder="{{ 'Your message...' | translate }}"
-        style="bottom: 0; position: absolute; border: 0; padding: 5px;"></textarea>
+        style="bottom: 0; border: 0; padding: 5px;"></textarea>
+      <mat-icon style="margin: 5px; cursor: pointer;" (click)="bntSendMessage()">send</mat-icon>
     </div>
   </div>
 </div>
