--- a/src/app/components/pages/chat/messages-page/messages-page.component.scss
+++ b/src/app/components/pages/chat/messages-page/messages-page.component.scss
@@ -37,7 +37,8 @@
   justify-content: space-evenly;
 }
 .msg-page-cont .inner-cont.on-cordx {
-  height: calc(100vh - 105px)
+  height: calc(100vh - 90px);
+  border: 0px;
 }
 
 .msg-page-cont .messages-title-cont {
