--- a/src/app/components/pages/user-page/user-page.component.html
+++ b/src/app/components/pages/user-page/user-page.component.html
@@ -1,8 +1,8 @@
 <loader *ngIf="loading"></loader>
 
 <ng-template #userInfo>
-  <div class="name-cont">
-    <span class="align-middle">
+  <div class="name-cont" style="display: flex; align-items: center; justify-content: center;">
+    <div class="align-middle">
       <span style="vertical-align: middle;">{{user.name}}, {{user.age}}</span>
       <span *ngIf="user.is_online" class="online-ic"></span>
 
@@ -13,7 +13,7 @@
           'verified' | translate }}</span>
       </div>
 
-      <div *ngIf="!isLoggedUser" class="btn-group">
+      <div *ngIf="!isLoggedUser" class="btn-group report-btn">
         <a data-toggle="dropdown" class="header-item"
           style="color: #000; font-size: 20px; cursor: pointer; margin-left: 10px;">
           <fa-icon class="primary-item" [icon]="faEllipsisH"></fa-icon>
@@ -33,20 +33,37 @@
       <a *ngIf="isLoggedUser && !['pending', 'verified'].includes(user.verification_status)" href="javascript:void(0)"
         (click)="openVerifyModal()" class="verification-status-text" style="vertical-align: middle;">{{ 'verify profile'
         | translate }}</a>
-    </span>
+    </div>
+
     <span *ngIf="user.compatibility" class="badge badge-pill badge-secondary align-middle compatibility-badge"
-      style="margin-left: 10px;" title="{{ 'Compatibility percentage to me' | translate }}">
+      style="margin-left: 10px; height: 24px;" title="{{ 'Compatibility percentage to me' | translate }}">
       <fa-icon [icon]="faCompPersonality"></fa-icon>
       {{ user.compatibility }}%
     </span>
 
     <span *ngIf="user.interestCompatibility" class="badge badge-pill badge-secondary align-middle compatibility-badge"
-      style="margin-left: 10px; background-color: #bf45f7;"
+      style="margin-left: 10px; height: 24px; background-color: #bf45f7;"
       title="{{ 'Interests compatibility percentage to me' | translate }}">
       <fa-icon [icon]="faCompInterests"></fa-icon>
       {{ user.interestCompatibility }}%
     </span>
   </div>
+
+  <div class="resp-report-btn">
+    <div *ngIf="!isLoggedUser" class="btn-group">
+      <a data-toggle="dropdown" class="header-item"
+        style="color: #000; font-size: 20px; cursor: pointer; margin-left: 10px;">
+        <fa-icon class="primary-item" [icon]="faEllipsisH"></fa-icon>
+      </a>
+      <div class="dropdown-menu" style="margin-top: -10px;">
+        <a class="dropdown-item" (click)="openReportModal()" style="cursor: pointer;">
+          <fa-icon [icon]="faFlag"></fa-icon>
+          {{ 'Report' | translate }}
+        </a>
+      </div>
+    </div>
+  </div>
+
   <div>
     {{ user.title }}
   </div>
@@ -64,51 +81,53 @@
         <div class="shadow-sm rounded"
           style="padding: 15px; min-height: 100px; background-color: #fff; position: relative;">
 
-          <div class="name-resp">
-            <ng-container *ngTemplateOutlet="userInfo"></ng-container>
-          </div>
-
-          <div class="user-images-cont2">
-            <div *ngIf="previewImages.length > 0" class="user-images">
-              <img *ngFor="let img of previewImages; let ix = index" [src]="img.small" class="border"
-                style="width: 50px; border-radius: 100%; margin-right: 5px; cursor: pointer;"
-                (click)="showGalleryModal(ix + 1)" />
-            </div>
-
-            <div *ngIf="!isLoggedUser" class="user-actions-cont2">
-              <button *ngIf="!user.relation_status || 'intro_to_me' === user.relation_status"
-                class="btn btn-outline-primary" style="margin-right: 10px;" (click)="openLikeModal()"
-                [disabled]="likingIntro">
-                <fa-icon [icon]="faLike"></fa-icon>
-                {{ 'Like' | translate }}
-              </button>
-
-              <button *ngIf="'matched' === user.relation_status" class="btn btn-outline-primary user-action-item"
-                style="margin-right: 10px;" (click)="unmatch()">
-                <fa-icon class="user-action-icon unmatch-icon" [icon]="faUnmatch"></fa-icon>
-                {{ 'Unmatch' | translate }}
-              </button>
-
-              <div *ngIf="'intro_from_me' === user.relation_status" class="intro-response">
-                {{ 'You have liked them' | translate }}
+          <div class="user-info-cont">
+            <div class="user-images-cont2">
+              <div *ngIf="previewImages.length > 0" class="user-images">
+                <img *ngFor="let img of previewImages; let ix = index" [src]="img.small" class="border"
+                  style="width: 50px; border-radius: 100%; margin-right: 5px; cursor: pointer;"
+                  (click)="showGalleryModal(ix + 1)" />
               </div>
 
-              <button *ngIf="'matched' === user.relation_status" class="btn btn-outline-primary user-action-item"
-                [routerLink]="['/chat/user/' + userId]">
-                <fa-icon class="user-action-icon message-icon" [icon]="faSendMessage"></fa-icon>
-                {{ 'Message' | translate }}
-              </button>
+              <div class="name-resp">
+                <ng-container *ngTemplateOutlet="userInfo"></ng-container>
+              </div>
+
+              <div *ngIf="!isLoggedUser" class="user-actions-cont2">
+                <button *ngIf="!user.relation_status || 'intro_to_me' === user.relation_status"
+                  class="btn btn-outline-primary" style="margin-right: 10px;" (click)="openLikeModal()"
+                  [disabled]="likingIntro">
+                  <fa-icon [icon]="faLike"></fa-icon>
+                  {{ 'Like' | translate }}
+                </button>
+
+                <button *ngIf="'matched' === user.relation_status" class="btn btn-outline-primary user-action-item"
+                  style="margin-right: 10px;" (click)="unmatch()">
+                  <fa-icon class="user-action-icon unmatch-icon" [icon]="faUnmatch"></fa-icon>
+                  {{ 'Unmatch' | translate }}
+                </button>
+
+                <div *ngIf="'intro_from_me' === user.relation_status" class="intro-response">
+                  {{ 'You have liked them' | translate }}
+                </div>
+
+                <button *ngIf="'matched' === user.relation_status" class="btn btn-outline-primary user-action-item"
+                  [routerLink]="['/chat/user/' + userId]">
+                  <fa-icon class="user-action-icon message-icon" [icon]="faSendMessage"></fa-icon>
+                  {{ 'Message' | translate }}
+                </button>
+              </div>
             </div>
           </div>
 
           <div *ngIf="isLoggedUser" class="image-content shadow-sm"
-            [ngStyle]="{ 'background-image': 'url(' + user.profile_image + ')'}"
+            [ngStyle]="{ 'background-image': 'url(' + cordovaService.getImgPath2(user.profile_image) + ')'}"
             (click)="showEditImageModal(imageUploadModal)">
             <div *ngIf="isLoggedUser" class="img-btn" style="color: #fff;">{{ 'Change image' | translate }}</div>
           </div>
 
           <div *ngIf="!isLoggedUser" class="image-content shadow-sm"
-            [ngStyle]="{ 'background-image': 'url(' + user.profile_image + ')'}" (click)="showGalleryModal()">
+            [ngStyle]="{ 'background-image': 'url(' + cordovaService.getImgPath2(user.profile_image) + ')'}" (click)="showGalleryModal()">
             <div class="img-btn" style="color: #fff;" *ngIf="user.images.length > 0">{{ 'View images' | translate }}
             </div>
           </div>
